welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:5: error: value ==- is not a member of Int
 if (value == nums(m) && i==-1) {i = m}
                          ^